// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Rail component snapshots > matches desktop snapshot 1`] = `
<div>
  <nav
    style="width: 94px; background: var(--surface-2); border-right: 1.5px solid var(--line); display: flex; flex-direction: column; align-items: center; padding: 18px 0px 14px; flex-shrink: 0;"
  >
    <div
      style="margin-bottom: 22px; color: var(--cat-ginger);"
    >
      <svg
        style="width: 42px; height: auto; display: block;"
        viewBox="0 0 160 150"
      >
        <g
          filter="url(#wob2)"
          opacity="0.9"
        >
          <circle
            cx="80"
            cy="92"
            fill="var(--cat-ginger)"
            r="50"
          />
          <path
            d="M52 52 L40 14 L84 46 Z"
            fill="var(--cat-ginger)"
          />
          <path
            d="M108 46 L122 14 L128 54 Z"
            fill="var(--cat-ginger)"
          />
          <circle
            cx="64"
            cy="88"
            fill="var(--cat-green)"
            r="7"
          />
          <circle
            cx="96"
            cy="88"
            fill="var(--cat-green)"
            r="7"
          />
        </g>
        <g
          fill="none"
          filter="url(#wob)"
          stroke="var(--cat-outline)"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="6"
        >
          <circle
            cx="80"
            cy="92"
            r="46"
          />
          <path
            d="M52 54 L40 16 L82 48"
          />
          <path
            d="M104 48 L122 16 L126 56"
          />
          <circle
            cx="64"
            cy="89"
            fill="var(--cat-outline)"
            r="4"
            stroke="none"
          />
          <circle
            cx="96"
            cy="89"
            fill="var(--cat-outline)"
            r="4"
            stroke="none"
          />
          <path
            d="M74 100 Q80 106 86 100"
          />
        </g>
      </svg>
    </div>
    <div
      style="display: flex; flex-direction: column; gap: 4px; width: 100%; align-items: center; flex: 1 1 0%;"
    >
      <button
        style="width: 62px; display: flex; flex-direction: column; align-items: center; gap: 5px; padding: 9px 0px; border-radius: 14px; cursor: pointer; background: var(--ginger-fade); color: var(--cat-ginger);"
      >
        <svg
          style="width: 23px; height: 23px;"
          viewBox="0 0 24 24"
        >
          <path
            d="M3 11 L12 3 L21 11 M6 9 V20 H18 V9"
            fill="none"
            filter="url(#wob)"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
          />
        </svg>
        <span
          style="font-size: 10px; letter-spacing: 0.02em; font-weight: 600;"
        >
          home
        </span>
      </button>
      <button
        style="width: 62px; display: flex; flex-direction: column; align-items: center; gap: 5px; padding: 9px 0px; border-radius: 14px; cursor: pointer; background: transparent; color: var(--ink-2);"
      >
        <svg
          style="width: 23px; height: 23px;"
          viewBox="0 0 24 24"
        >
          <path
            d="M4 5 H20 V15 H10 L5 19 V15 H4 Z"
            fill="none"
            filter="url(#wob)"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
          />
        </svg>
        <span
          style="font-size: 10px; letter-spacing: 0.02em; font-weight: 600;"
        >
          chats
        </span>
      </button>
      <button
        style="width: 62px; display: flex; flex-direction: column; align-items: center; gap: 5px; padding: 9px 0px; border-radius: 14px; cursor: pointer; background: transparent; color: var(--ink-2);"
      >
        <svg
          style="width: 23px; height: 23px;"
          viewBox="0 0 24 24"
        >
          <path
            d="M6 4 V20 M6 5 H18 L15 8.5 L18 12 H6"
            fill="none"
            filter="url(#wob)"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
          />
        </svg>
        <span
          style="font-size: 10px; letter-spacing: 0.02em; font-weight: 600;"
        >
          projects
        </span>
      </button>
      <button
        style="width: 62px; display: flex; flex-direction: column; align-items: center; gap: 5px; padding: 9px 0px; border-radius: 14px; cursor: pointer; background: transparent; color: var(--ink-2);"
      >
        <svg
          style="width: 23px; height: 23px;"
          viewBox="0 0 24 24"
        >
          <path
            d="M7 3 H14 L19 8 V21 H7 Z M14 3 V8 H19 M10 12 H16 M10 16 H16"
            fill="none"
            filter="url(#wob)"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
          />
        </svg>
        <span
          style="font-size: 10px; letter-spacing: 0.02em; font-weight: 600;"
        >
          docs
        </span>
      </button>
      <button
        style="width: 62px; display: flex; flex-direction: column; align-items: center; gap: 5px; padding: 9px 0px; border-radius: 14px; cursor: pointer; background: transparent; color: var(--ink-2);"
      >
        <svg
          style="width: 23px; height: 23px;"
          viewBox="0 0 24 24"
        >
          <path
            d="M9 3 V7 M15 3 V7 M7 7 H17 V11 A5 5 0 0 1 7 11 Z M12 16 V21"
            fill="none"
            filter="url(#wob)"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
          />
        </svg>
        <span
          style="font-size: 10px; letter-spacing: 0.02em; font-weight: 600;"
        >
          providers
        </span>
      </button>
      <button
        style="width: 62px; display: flex; flex-direction: column; align-items: center; gap: 5px; padding: 9px 0px; border-radius: 14px; cursor: pointer; background: transparent; color: var(--ink-2);"
      >
        <svg
          style="width: 23px; height: 23px;"
          viewBox="0 0 24 24"
        >
          <path
            d="M7 8 H17 V17 H7 Z M12 8 V4 M9.5 12 h0.01 M14.5 12 h0.01 M10 14.5 H14"
            fill="none"
            filter="url(#wob)"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
          />
        </svg>
        <span
          style="font-size: 10px; letter-spacing: 0.02em; font-weight: 600;"
        >
          agents
        </span>
      </button>
      <button
        style="width: 62px; display: flex; flex-direction: column; align-items: center; gap: 5px; padding: 9px 0px; border-radius: 14px; cursor: pointer; background: transparent; color: var(--ink-2);"
      >
        <svg
          style="width: 23px; height: 23px;"
          viewBox="0 0 24 24"
        >
          <path
            d="M4 5 H20 V19 H4 Z M4 15 L9 10 L13 14 L16 11 L20 15 M15.5 8.5 h0.01"
            fill="none"
            filter="url(#wob)"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
          />
        </svg>
        <span
          style="font-size: 10px; letter-spacing: 0.02em; font-weight: 600;"
        >
          image lab
        </span>
      </button>
      <button
        style="width: 62px; display: flex; flex-direction: column; align-items: center; gap: 5px; padding: 9px 0px; border-radius: 14px; cursor: pointer; background: transparent; color: var(--ink-2);"
      >
        <svg
          style="width: 23px; height: 23px;"
          viewBox="0 0 24 24"
        >
          <path
            d="M4 7 H20 M4 12 H20 M4 17 H20 M9 5 V9 M15 10 V14 M8 15 V19"
            fill="none"
            filter="url(#wob)"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
          />
        </svg>
        <span
          style="font-size: 10px; letter-spacing: 0.02em; font-weight: 600;"
        >
          settings
        </span>
      </button>
    </div>
    <button
      style="width: 46px; height: 46px; border-radius: 12px; background: transparent; cursor: pointer; display: flex; align-items: center; justify-content: center; color: var(--ink-2);"
      title="day / night"
    >
      <svg
        style="width: 21px; height: 21px;"
        viewBox="0 0 24 24"
      >
        <path
          d="M19 13 a8 8 0 1 1 -8 -10 a6 6 0 0 0 8 10 Z"
          fill="none"
          filter="url(#wob)"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
        />
      </svg>
    </button>
    <div
      style="width: 38px; height: 38px; border-radius: 99px; background: var(--c-purple); display: flex; align-items: center; justify-content: center; margin-top: 6px; color: rgb(255, 255, 255); font-family: var(--font-display); font-weight: 800; font-size: 16px; box-shadow: var(--btn-shadow);"
    >
      j
    </div>
  </nav>
</div>
`;

exports[`Rail component snapshots > matches mobile bottom tab bar snapshot 1`] = `
<div>
  <nav
    class="safe-bottom"
    style="position: absolute; bottom: 0px; left: 0px; right: 0px; background: var(--surface-2); border-top: 1.5px solid var(--line); display: flex; flex-direction: row; align-items: center; justify-content: space-around; padding-top: 10px; z-index: 100; box-shadow: 0 -4px 14px rgba(0,0,0,0.05);"
  >
    <button
      style="display: flex; flex-direction: column; align-items: center; gap: 4px; padding: 6px 0px; background: transparent; color: var(--cat-ginger); flex: 1 1 0%;"
    >
      <svg
        style="width: 24px; height: 24px; margin-bottom: 2px;"
        viewBox="0 0 24 24"
      >
        <path
          d="M3 11 L12 3 L21 11 M6 9 V20 H18 V9"
          fill="none"
          filter="url(#wob)"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
        />
      </svg>
      <span
        style="font-size: 10px; letter-spacing: 0.02em; font-weight: 600;"
      >
        home
      </span>
    </button>
    <button
      style="display: flex; flex-direction: column; align-items: center; gap: 4px; padding: 6px 0px; background: transparent; color: var(--ink-2); flex: 1 1 0%;"
    >
      <svg
        style="width: 24px; height: 24px; margin-bottom: 2px;"
        viewBox="0 0 24 24"
      >
        <path
          d="M4 5 H20 V15 H10 L5 19 V15 H4 Z"
          fill="none"
          filter="url(#wob)"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
        />
      </svg>
      <span
        style="font-size: 10px; letter-spacing: 0.02em; font-weight: 600;"
      >
        chats
      </span>
    </button>
    <button
      style="display: flex; flex-direction: column; align-items: center; gap: 4px; padding: 6px 0px; background: transparent; color: var(--ink-2); flex: 1 1 0%;"
    >
      <svg
        style="width: 24px; height: 24px; margin-bottom: 2px;"
        viewBox="0 0 24 24"
      >
        <path
          d="M6 4 V20 M6 5 H18 L15 8.5 L18 12 H6"
          fill="none"
          filter="url(#wob)"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
        />
      </svg>
      <span
        style="font-size: 10px; letter-spacing: 0.02em; font-weight: 600;"
      >
        projects
      </span>
    </button>
    <button
      style="display: flex; flex-direction: column; align-items: center; gap: 4px; padding: 6px 0px; background: transparent; color: var(--ink-2); flex: 1 1 0%;"
    >
      <svg
        style="width: 24px; height: 24px; margin-bottom: 2px;"
        viewBox="0 0 24 24"
      >
        <path
          d="M7 3 H14 L19 8 V21 H7 Z M14 3 V8 H19 M10 12 H16 M10 16 H16"
          fill="none"
          filter="url(#wob)"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
        />
      </svg>
      <span
        style="font-size: 10px; letter-spacing: 0.02em; font-weight: 600;"
      >
        docs
      </span>
    </button>
    <button
      style="display: flex; flex-direction: column; align-items: center; gap: 4px; padding: 6px 0px; background: transparent; color: var(--ink-2); flex: 1 1 0%;"
    >
      <svg
        style="width: 24px; height: 24px; margin-bottom: 2px;"
        viewBox="0 0 24 24"
      >
        <path
          d="M9 3 V7 M15 3 V7 M7 7 H17 V11 A5 5 0 0 1 7 11 Z M12 16 V21"
          fill="none"
          filter="url(#wob)"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
        />
      </svg>
      <span
        style="font-size: 10px; letter-spacing: 0.02em; font-weight: 600;"
      >
        providers
      </span>
    </button>
    <button
      style="display: flex; flex-direction: column; align-items: center; gap: 4px; padding: 6px 0px; background: transparent; color: var(--ink-2); flex: 1 1 0%;"
    >
      <svg
        style="width: 24px; height: 24px; margin-bottom: 2px;"
        viewBox="0 0 24 24"
      >
        <path
          d="M7 8 H17 V17 H7 Z M12 8 V4 M9.5 12 h0.01 M14.5 12 h0.01 M10 14.5 H14"
          fill="none"
          filter="url(#wob)"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
        />
      </svg>
      <span
        style="font-size: 10px; letter-spacing: 0.02em; font-weight: 600;"
      >
        agents
      </span>
    </button>
    <button
      style="display: flex; flex-direction: column; align-items: center; gap: 4px; padding: 6px 0px; background: transparent; color: var(--ink-2); flex: 1 1 0%;"
    >
      <svg
        style="width: 24px; height: 24px; margin-bottom: 2px;"
        viewBox="0 0 24 24"
      >
        <path
          d="M4 5 H20 V19 H4 Z M4 15 L9 10 L13 14 L16 11 L20 15 M15.5 8.5 h0.01"
          fill="none"
          filter="url(#wob)"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
        />
      </svg>
      <span
        style="font-size: 10px; letter-spacing: 0.02em; font-weight: 600;"
      >
        image lab
      </span>
    </button>
    <button
      style="display: flex; flex-direction: column; align-items: center; gap: 4px; padding: 6px 0px; background: transparent; color: var(--ink-2); flex: 1 1 0%;"
    >
      <svg
        style="width: 24px; height: 24px; margin-bottom: 2px;"
        viewBox="0 0 24 24"
      >
        <path
          d="M4 7 H20 M4 12 H20 M4 17 H20 M9 5 V9 M15 10 V14 M8 15 V19"
          fill="none"
          filter="url(#wob)"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
        />
      </svg>
      <span
        style="font-size: 10px; letter-spacing: 0.02em; font-weight: 600;"
      >
        settings
      </span>
    </button>
  </nav>
</div>
`;
